--- a/cliente.html
+++ b/cliente.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Área do Cliente - Locadora de Carros Premium</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seu Título</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -93,4 +93,5 @@
   </script>
 </body>
 </html>
+
 
